fix(VField): align label with input when rounded not applied
regression from #17995

--- a/packages/vuetify/src/components/VField/VField.sass
+++ b/packages/vuetify/src/components/VField/VField.sass
@@ -361,12 +361,13 @@
       border-top-width: var(--v-field-border-width)
       border-bottom-width: var(--v-field-border-width)
       border-inline-start-width: var(--v-field-border-width)
+      flex: 0 0 12px
 
-      $root: &
-
+      $v-field-outline-start-root: &
+      
       @at-root
         @include tools.density('v-input', $input-density) using ($modifier)
-          @at-root #{selector.nest(&, $root)}
+          @at-root #{selector.nest(&, selector.append("[class*='rounded']", $v-field-outline-start-root))}
             flex: 0 0 #{$field-control-outlined-start-width + $modifier * .5}
 
 
